[package]
description = "Cap9 Ewasm Kernel Library"
name = "kernel-ewasm"
version = "0.1.0"
authors = ["Daohub Inc <info@daohub.io>"]
edition = "2018"

[dependencies]
tiny-keccak = "1.4.2"
pwasm-std = {version = "0.13", default-features = false}
pwasm-ethereum = {version = "0.8", default-features = false}
pwasm-abi = "0.2"
pwasm-abi-derive = "0.2"
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }
validator = { path = "./validator", default-features = false }

[dev-dependencies.pwasm-test]
git = "https://github.com/paritytech/pwasm-test"
default-features = false

[lib]
name = "kernel_ewasm"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
