[package]
name = "native_validator"
version = "0.1.0"
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
edition = "2018"

[dependencies]
parity-wasm = "0.35"
pwasm-std = "0.13"
pwasm-ethereum = "0.8"
wabt = "0.7.1"
validator = { path = "../kernel-ewasm/validator" }

# [dev-dependencies.pwasm-test]
# git = "https://github.com/paritytech/pwasm-test"
# default-features = false

# [features]
# std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std"]
