[package]
name = "cap9-cli"
version = "0.1.0"
authors = ["DaoHub <info@daohub.io>"]
edition = "2018"

[dependencies]
cap9-std = { path = "../cap9-std", features = ["std"] }
cap9-core = { path = "../cap9-core" }
clap = "~2.32.0"
env_logger = "0.6.2"
ethabi = "8.0.0"
failure = "0.1.5"
failure_derive = "0.1.5"
jsonrpc = "0.11.0"
lazy_static = "1.3.0"
log = "0.4.0"
pwasm-abi = "0.2"
rustc-hex = "2.0.1"
serde = { version = "1.0.98", features = ["derive"] }
serde_bytes = "0.11.1"
serde_json = "1.0.40"
time = "0.1"
# web3 = { git = "https://github.com/Daolab/rust-web3", rev = "eda5d97db3133dabba9358fa9d34eef27a0a44c2" }
# web3 = { git = "https://github.com/tomusdrw/rust-web3", rev = "a72d21cd3110c96a44c72fbf3ed8021194322d74" }
web3 = "0.8.0"

[dev-dependencies]
tempfile = "3.1.0"
assert_cmd = "0.11"
