[package]
description = "Cap9 Ewasm Kernel Library"
name = "cap9-kernel"
version = "0.1.0"
authors = ["Daohub Inc <info@daohub.io>"]
edition = "2018"

[dependencies]
tiny-keccak = "1.4.2"
pwasm-std = {version = "0.13", default-features = false}
pwasm-ethereum = {version = "0.8", default-features = false}
pwasm-abi = "0.2"
pwasm-abi-derive = "0.2"
parity-wasm = { git = "https://github.com/paritytech/parity-wasm.git", default-features = false }
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }
validator = { path = "../validator", default-features = false }
cap9-std = { path = "../cap9-std", default-features = false}
cap9-core = {path = "../cap9-core", default-features = false}

[dev-dependencies.pwasm-test]
git = "https://github.com/paritytech/pwasm-test"
default-features = false

[lib]
name = "cap9_kernel"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std"]
panic_with_msg = ["pwasm-std/panic_with_msg", "cap9-std/panic_with_msg"]
