[package]
name = "cap9-std"
version = "0.1.0"
authors = ["DaoHub <info@daohub.io>"]
edition = "2018"

[dependencies]
pwasm-std = { version = "0.13", default-features = false }
pwasm-ethereum = { version = "0.8", features = ["kip6"] }
pwasm-abi = "0.2"
cap9-core = {path = "../cap9-core", default-features = false}
rustc-hex = {version = "2.0.1", optional = true }

[dev-dependencies]
pwasm-abi-derive = { git = "https://github.com/Daohub-io/pwasm-abi.git", branch = "json-payable-constructors" }
validator = { path = "../validator", default-features = false }
parity-wasm = { git = "https://github.com/paritytech/parity-wasm.git", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cap9-test = { path = "../cap9-test" }
pwasm-test = { git = "https://github.com/paritytech/pwasm-test", default-features = false }


[features]
default = ["std"]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std", "rustc-hex"]
panic_with_msg = ["pwasm-std/panic_with_msg"]
