[package]
name = "example_contract_2"
version = "0.1.0"

[dependencies]
pwasm-std = "0.13"
pwasm-ethereum = { version = "0.8", features = ["kip6"] }
pwasm-abi = "0.2"
pwasm-abi-derive = "0.2"
tiny-keccak = "1.4.2"

[dev-dependencies]
pwasm-test = { git = "https://github.com/paritytech/pwasm-test" }
cap9-build = { path = "../../cap9-build" }
pwasm-utils-cli = "0.7.0"

[features]
default = []
std = ["pwasm-std/std", "pwasm-ethereum/std"]

[lib]
crate-type = ["cdylib"]
