[package]
name = "validator"
version = "0.1.0"
authors = ["Daohub Inc <info@daohub.io>"]
edition = "2018"

[dependencies]
parity-wasm = "0.35"
pwasm-std = "0.13"
pwasm-ethereum = "0.8"
# kernel-ewasm = { path = "../kernel-ewasm" }

[dev-dependencies.pwasm-test]
wabt = "0.7.1"
git = "https://github.com/paritytech/pwasm-test"
# default-features = false

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std"]
