[package]
name = "srml-contracts"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
pwasm-utils = { version = "0.11.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
parity-wasm = { version = "0.40.3", default-features = false }
wasmi-validation = { version = "0.2.0", default-features = false }
primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d", default-features = false }
sandbox = { package = "sr-sandbox", git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d", default-features = false }
support = { package = "srml-support",git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d", default-features = false }
randomness-collective-flip = { package = "srml-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d", default-features = false }

[dev-dependencies]
wabt = "0.9.2"
assert_matches = "1.3.0"
hex-literal = "0.2.1"
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d" }
hex = "0.3.2"
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate.git", rev = "bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"primitives/std",
	"sr-primitives/std",
	"randomness-collective-flip/std",
	"runtime-io/std",
	"rstd/std",
	"sandbox/std",
	"support/std",
	"system/std",
	"parity-wasm/std",
	"pwasm-utils/std",
	"wasmi-validation/std",
]
