[package]
name = "test-harness"
version = "0.1.0"
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
edition = "2018"

[dependencies]
substrate-api-client = { git = "https://github.com/Daohub-io/substrate-api-client.git", branch = "daohub" }
env_logger      = { version = "0.6"}
ws              = { version = "0.7", optional = true }
hex             = { version = "0.3", default-features=false, optional = true }
log             = { version = "0.4" }
serde           = { version = "1.0", optional = true, features = ["derive"] }
serde_json      = { version = "1.0", optional = true }
primitive-types = { version = "0.5", default-features = false, features = ["codec"] }
parity-codec-derive = { version = "3.3", default-features = false }
wabt = "0.9.0"

[patch."https://github.com/paritytech/substrate"]
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/Daohub-io/substrate-api-client.git", branch = "daohub", default-features=false }

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}

# substrate-api-client relies on a modified version of substrate-primitives
[dependencies.primitives]
git = "https://github.com/Daohub-io/substrate-api-client.git"
branch = "daohub"
default-features = false
package = "substrate-primitives"

[dependencies.codec]
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"
default-features = false

[dependencies.indices]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "srml-indices"
default-features=false

[dependencies.runtime_io]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "sr-io"
default-features=false

[dependencies.metadata]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "srml-metadata"
default-features=false

[dependencies.runtime_version]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "sr-version"
default-features=false

[dependencies.balances]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "srml-balances"
default-features=false

[dependencies.system]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "srml-system"
default-features=false

[dependencies.runtime_primitives]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "sr-primitives"
default-features=false

[dependencies.runtime_support]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "srml-support"
default-features=false

[dependencies.rstd]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "sr-std"
default-features = false

[dependencies.node_runtime]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "node-runtime"

[dependencies.node_primitives]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "node-primitives"

[dependencies.contracts]
git = 'https://github.com/paritytech/substrate'
rev = "f17d023bbe179f15678ac9989f471c9b18917e17"
package = "srml-contracts"

[dependencies.keyring]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "substrate-keyring"

[dependencies.clap]
version = "2.33"
features = ["yaml"]


[features]
default = ["std"]
std = [
	"primitives/std",
	"codec/std",
    "runtime_primitives/std",
	"runtime_support/std",
	"runtime_primitives/std",
	"system/std",
	"balances/std",
	"runtime_version/std",
	"metadata/std",
	"runtime_io/std",
	"indices/std",
	"primitives/std",
	"serde/std",
	"serde_json",
	"ws",
	"hex",
]
